<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FindPlaces2</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="newplace">New Place</string>
    <string name="enter_new_place_button">Ok</string>
    <string name="disclaimer">"Keep an eye on the road at all times. Do not use cell phone while driving. Be aware of your surroundings. "</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="home_address_to_add">Home Address</string>
    <string name="work_address_to_add">Work Address</string>
    <string name="set_addresses_home_work">Set</string>

    
    <string-array name="PlaceTypes">
        <item>""</item>
        <item>accounting	</item>
        <item>	airport	</item>
        <item>	amusement park	</item>
        <item>	aquarium	</item>
        <item>	art gallery	</item>
        <item>	atm	</item>
        <item>	bakery	</item>
        <item>	bank	</item>
        <item>	bar	</item>
        <item>	beauty salon	</item>
        <item>	bicycle store	</item>
        <item>	book store	</item>
        <item>	bowling alley	</item>
        <item>	bus station	</item>
        <item>	cafe	</item>
        <item>	campground	</item>
        <item>	car dealer	</item>
        <item>	car rental	</item>
        <item>	car repair	</item>
        <item>	car wash	</item>
        <item>	casino	</item>
        <item>	cemetery	</item>
        <item>	church	</item>
        <item>	city hall	</item>
        <item>	clothing store	</item>
        <item>	convenience store	</item>
        <item>	courthouse	</item>
        <item>	dentist	</item>
        <item>	department store	</item>
        <item>	doctor	</item>
        <item>	electrician	</item>
        <item>	electronics store	</item>
        <item>	embassy	</item>
        <item>	establishment	</item>
        <item>	finance	</item>
        <item>	fire station	</item>
        <item>	florist	</item>
        <item>	food	</item>
        <item>	funeral home	</item>
        <item>	furniture store	</item>
        <item>	gas station	</item>
        <item>	general contractor	</item>
        <item>	geocode	</item>
        <item>	grocery or supermarket	</item>
        <item>	gym	</item>
        <item>	hair care	</item>
        <item>	hardware store	</item>
        <item>	health	</item>
        <item>	hindu temple	</item>
        <item>	home goods store	</item>
        <item>	hospital	</item>
        <item>	insurance agency	</item>
        <item>	jewelry store	</item>
        <item>	laundry	</item>
        <item>	lawyer	</item>
        <item>	library	</item>
        <item>	liquor store	</item>
        <item>	local government office	</item>
        <item>	locksmith	</item>
        <item>	lodging	</item>
        <item>	meal delivery	</item>
        <item>	meal takeaway	</item>
        <item>	mosque	</item>
        <item>	movie rental	</item>
        <item>	movie theater	</item>
        <item>	moving company	</item>
        <item>	museum	</item>
        <item>	night club	</item>
        <item>	painter	</item>
        <item>	park	</item>
        <item>	parking	</item>
        <item>	pet store	</item>
        <item>	pharmacy	</item>
        <item>	physiotherapist	</item>
        <item>	place of worship	</item>
        <item>	plumber	</item>
        <item>	police	</item>
        <item>	post office	</item>
        <item>	real estate agency	</item>
        <item>	restaurant	</item>
        <item>	roofing contractor	</item>
        <item>	rv park	</item>
        <item>	school	</item>
        <item>	shoe store	</item>
        <item>	shopping mall	</item>
        <item>	spa	</item>
        <item>	stadium	</item>
        <item>	storage	</item>
        <item>	store	</item>
        <item>	subway station	</item>
        <item>	synagogue	</item>
        <item>	taxi stand	</item>
        <item>	train station	</item>
        <item>	travel agency	</item>
        <item>	university	</item>
        <item>	veterinary care	</item>
        <item>	zoo	</item>
        <item>  yogurt shop	</item>
        <item>	sporting goods store	</item>
        <item>	burgers	</item>
        <item>	hotel	</item>
        <item>	motel	</item>
        <item>	arcade	</item>
        <item>	video games store	</item>
        <item>	snowboarding	</item>
        <item>	waterpark	</item>
        <item>	music store	</item>
        <item>	lounge	</item>
        <item>	computer store	</item>
        <item>	fast food	</item>
        <item>	coffee shop	</item>
        <item> 	ice cream shop 	</item>        
    </string-array>
        <string name="route_now">Route</string>
        <string name="empty_string"></string>
        <string name="set_home_address">Set Home Address</string>
        <string name="work_address_set">Set Work Address</string>
        <string name="legal_notice">Legal Notice</string>
        <string name="set_the_address_hint">Set Address</string>
        <string name="delete_place">"Delete "</string>
    
</resources>