<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/home_address_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:hint="@string/home_address_to_add"
        android:inputType="textPostalAddress" />

    <EditText
        android:id="@+id/work_address_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/home_address_setting"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="63dp"
        android:ems="10"
        android:hint="@string/work_address_to_add"
        android:inputType="textPostalAddress" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/set_addresses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/work_address_setting"
        android:layout_alignRight="@+id/work_address_setting"
        android:layout_below="@+id/work_address_setting"
        android:layout_marginTop="90dp"
        android:text="@string/set_addresses_home_work" />

</RelativeLayout>