<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/the_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainScreen" >
	
    <AutoCompleteTextView
        android:id="@+id/new_place_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/newplace" >

        <requestFocus />
    </AutoCompleteTextView>

    <Button
        android:id="@+id/new_place_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/new_place_edittext"
        android:layout_alignParentRight="true"
        android:text="@string/enter_new_place_button" />

    <Button
        android:id="@+id/route"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/new_place_edittext"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/new_place_ok"
        android:text="@string/route_now" />

    <LinearLayout
        android:id="@+id/textview_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/route"
        android:layout_below="@+id/new_place_edittext"
        android:orientation="vertical" >

        <ListView
            android:id="@+id/android:list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </ListView>

    </LinearLayout>

</RelativeLayout>